# boolsurf

./: .gitignore
apps/: CMakeLists.txt
apps/vector-mesh-editing/: CMakeLists.txt  app.cpp  app.h  gui.h  mesh-vector-graphics.cpp  render.h  spline_editing.h  utils.h
apps/vector-mesh-editing/ext/undo/: bytes.h  undo.h
libs/: CMakeLists.txt
libs/boolsurf/: CMakeLists.txt  boolsurf.cpp  boolsurf.h  boolsurf_io.cpp  boolsurf_io.h  boolsurf_utils.h  bsh.h
libs/boolsurf/ext/: robin_hood.h
libs/boolsurf/ext/CDT/CDT/include/: CDTUtils.h
libs/boolsurf/notes/: cicli.md
libs/mesh_spline_editing/: spline_editing.h  spline_mesh.h
libs/yocto/: yocto_bvh.cpp  yocto_geometry.h  yocto_mesh.cpp  yocto_mesh.h  yocto_scene.cpp  yocto_scene.h  yocto_sceneio.cpp  yocto_shape.cpp  yocto_shape.h  yocto_trace.cpp
libs/yocto_gui/: yocto_glview.cpp  yocto_glview.h  yocto_opengl.cpp  yocto_opengl.h  yocto_shade.cpp  yocto_shade.h
scripts/: build.py
